[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/MenuColors/Overworld_Rect_BG_COLOR.png" type="Texture" id=1]
[ext_resource path="res://assets/Themes/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/DrawOutlineOnRect.gd" type="Script" id=3]
[ext_resource path="res://assets/OverworldLocationKlickableArea.gd" type="Script" id=4]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/ZahraM.png" type="Texture" id=5]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/IshtarF.png" type="Texture" id=6]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/Maia.png" type="Texture" id=7]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/Alara.png" type="Texture" id=8]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/Eirene.png" type="Texture" id=9]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/ZahraF.png" type="Texture" id=10]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/NykaraF.png" type="Texture" id=11]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/NykaraM.png" type="Texture" id=12]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/Sutekh.png" type="Texture" id=13]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/IshtarM.png" type="Texture" id=14]
[ext_resource path="res://assets/CharacterPotraits/OverworldMapPotraits/Player.png" type="Texture" id=15]
[ext_resource path="res://assets/OverworldLocation.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "Alara",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Eirene",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "IshtarF",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "IshtarM",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Maia",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "NykaraF",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "NykaraM",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Player",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Sutekh",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "ZahraF",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ZahraM",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

export(int) var radius = 50

var fill_color = Globals.MENU_COLOR_BEIGE
export(Color) var outline_color = Color(0, 0, 0, 1)
export(float) var outline_width = 2.0

# Called when the node enters the scene tree for the first time.
func _ready():
	pass
	


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _draw():
	draw_circle(Vector2(), radius + outline_width, outline_color)
	draw_circle(Vector2(), radius, fill_color)
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 120, 27.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 68.0

[node name="OverworldLocation" type="Control"]
anchor_left = -0.06
anchor_top = -0.1
anchor_right = 0.057
anchor_bottom = 0.037
margin_left = 133.2
margin_top = 245.0
margin_right = -91.44
margin_bottom = 97.04
mouse_filter = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="LocationNameBox" type="TextureRect" parent="."]
margin_left = -6.0
margin_top = -18.0
margin_right = 227.0
margin_bottom = 14.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="LocationName" type="Label" parent="LocationNameBox"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "This is a test"
align = 1
valign = 1
max_lines_visible = 1

[node name="CharacterImage" type="AnimatedSprite" parent="."]
position = Vector2( 111, -64 )
scale = Vector2( 0.055, 0.055 )
frames = SubResource( 1 )
animation = "ZahraF"
__meta__ = {
"_edit_group_": true
}

[node name="CircleAttempt" type="Node2D" parent="CharacterImage"]
position = Vector2( 0, 345.455 )
scale = Vector2( 18.1818, 18.1818 )
z_index = -1
script = SubResource( 2 )
radius = 48

[node name="OverworldLocationKlickableArea" type="Area2D" parent="."]
position = Vector2( 45, -79 )
script = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OverworldLocationKlickableArea"]
position = Vector2( 65, 77.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverworldLocationKlickableArea"]
position = Vector2( 68, 22 )
shape = SubResource( 4 )

[connection signal="input_event" from="OverworldLocationKlickableArea" to="OverworldLocationKlickableArea" method="_on_OverworldLocationKlickableArea_input_event"]
